8073184: Compile of java.lang.Integer::getChars fails with LoopLimitCheck = false after 8054478

CastII that guards counted loops confuses range check elimination with LoopLimitCheck off

Reviewed-by: kvn, iveresov